--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,8 @@
 	min-width: 300px;
 	max-width: 600px;
 	background-color: #008000;
+	border-radius: 2vh;
 }
-
 .e-input-group:not(.e-float-icon-left),
 .e-input-group.e-success:not(.e-float-icon-left),
 .e-input-group.e-warning:not(.e-float-icon-left),
